--- a/src/components/Body/Body.scss
+++ b/src/components/Body/Body.scss
@@ -1,17 +1,19 @@
 .body {
   height: 600px;
 
-  img {
-    max-width: 100%;
-  }
+  .react-image-hotspots {
+    img {
+      max-width: 100%;
+    }
 
-  div {
-    background: transparent !important;
-    box-shadow: none !important;
-  }
+    .hotspot {
+      background: transparent !important;
+      box-shadow: none !important;
 
-  .ratio-1x1 {
-    width: 25px;
-    height: 25px;
+      .ratio-1x1 {
+        width: 25px;
+        height: 25px;
+      }
+    }
   }
 }
